@@ -8,12 +8,16 @@ import java.util.List;
 import java.util.Properties;
 import java.util.Set;
 
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.kafka.common.serialization.Serde;
 
 import us.dot.its.jpo.conflictmonitor.monitor.algorithms.timestamp_delta.spat.SpatTimestampDeltaParameters;
 import us.dot.its.jpo.conflictmonitor.monitor.algorithms.validation.spat.SpatValidationParameters;
+import us.dot.its.jpo.conflictmonitor.monitor.models.events.broadcast_rate.SpatBroadcastRateEvent;
+import us.dot.its.jpo.conflictmonitor.monitor.models.events.minimum_data.SpatMinimumDataEvent;
+import us.dot.its.jpo.conflictmonitor.monitor.models.events.timestamp_delta.SpatTimestampDeltaEvent;
 import us.dot.its.jpo.conflictmonitor.monitor.serialization.JsonSerdes;
 import us.dot.its.jpo.conflictmonitor.monitor.topologies.timestamp_delta.SpatTimestampDeltaTopology;
 import us.dot.its.jpo.conflictmonitor.testutils.TopologyTestUtils;
@@ -28,17 +32,24 @@ import org.junit.Test;
 
 import static java.util.stream.Collectors.toSet;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.*;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.greaterThan;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.notNullValue;
+import static org.hamcrest.Matchers.startsWith;
 
+@Slf4j
 public class SpatValidationTopologyTest {
-
-    private final static Logger logger = LoggerFactory.getLogger(SpatValidationTopologyTest.class);
 
     final String inputTopicName = "topic.ProcessedSpat";
     final String broadcastRateTopicName = "topic.CmSpatBroadcastRateEvents";
     final String minimumDataTopicName = "topic.CmSpatMinimumDataEvents";
     final int maxDeltaMilliseconds = 50;
     final String timestampOutputTopicName = "topic.CmTimestampDeltaEvent";
+    final String keyStoreName = "spatTimestampDeltaKeyStore";
+    final String eventStoreName = "spatTimestampDeltaEventStore";
+    final int retentionTimeMinutes = 60;
+    final String notificationTopicName = "topic.CmTimestampDeltaNotification";
     
     // Use a tumbling window for test (rolling period = output interval)
     // just to make it easier to design the test.
@@ -67,22 +78,22 @@ public class SpatValidationTopologyTest {
         var streamsConfig = createStreamsConfig();
         Topology topology = createTopology();
 
-        try (TopologyTestDriver driver = new TopologyTestDriver(topology, streamsConfig)) {
+        try (TopologyTestDriver driver = new TopologyTestDriver(topology, streamsConfig);
+             Serde<RsuIntersectionKey> rsuIntersectionKeySerde
+                     = us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.RsuIntersectionKey();
+             Serde<ProcessedSpat> processedSpatSerde
+                     = us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.ProcessedSpat();
+             Serde<SpatBroadcastRateEvent> spatBroadcastRateEventSerde = JsonSerdes.SpatBroadcastRateEvent();
+             Serde<SpatMinimumDataEvent> spatMinimumDataEventSerde = JsonSerdes.SpatMinimumDataEvent()) {
 
             var inputTopic = driver.createInputTopic(inputTopicName,
-                us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.RsuIntersectionKey().serializer(), 
-                us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.ProcessedSpat().serializer()
-            );
+                    rsuIntersectionKeySerde.serializer(), processedSpatSerde.serializer());
 
             var broadcastRateTopic = driver.createOutputTopic(broadcastRateTopicName,
-                us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.RsuIntersectionKey().deserializer(), 
-                JsonSerdes.SpatBroadcastRateEvent().deserializer()
-            );
+                    rsuIntersectionKeySerde.deserializer(), spatBroadcastRateEventSerde.deserializer());
 
             var minimumDataTopic = driver.createOutputTopic(minimumDataTopicName,
-                us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.RsuIntersectionKey().deserializer(), 
-                JsonSerdes.SpatMinimumDataEvent().deserializer()
-            );
+                    rsuIntersectionKeySerde.deserializer(), spatMinimumDataEventSerde.deserializer());
 
             final RsuIntersectionKey key = new RsuIntersectionKey(rsuId, intersectionId, region);
 
@@ -105,13 +116,13 @@ public class SpatValidationTopologyTest {
                 assertThat("min data event rsuId", result.getSource(), equalTo(source));
                 assertThat("min data event intersectionId", result.getIntersectionID(), equalTo(intersectionId));
                 assertThat("min data missingDataElements size", result.getMissingDataElements(), hasSize(1));
-                var msg = result.getMissingDataElements().get(0);
+                var msg = result.getMissingDataElements().getFirst();
                 assertThat("min data validation message match", msg, startsWith(validationMsg));
             }
 
             var broadcastRateList = broadcastRateTopic.readKeyValuesToList();
             assertThat("Should be 1 broadcast rate event", broadcastRateList, hasSize(1));
-            var broadcastRate = broadcastRateList.get(0);
+            var broadcastRate = broadcastRateList.getFirst();
             var bcKey =  broadcastRate.key;
             assertThat("broadcast rate key rsuId", bcKey.getRsuId(), equalTo(rsuId));
             assertThat("broadcast rate key intersectionId", bcKey.getIntersectionId(), equalTo(intersectionId));
@@ -132,15 +143,16 @@ public class SpatValidationTopologyTest {
         Properties streamsConfig = createStreamsConfig();
         Topology topology = createTopology();
 
-        try (TopologyTestDriver driver = new TopologyTestDriver(topology, streamsConfig)) {
+        try (TopologyTestDriver driver = new TopologyTestDriver(topology, streamsConfig);
+             Serde<RsuIntersectionKey> rsuIntersectionKeySerde = us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.RsuIntersectionKey();
+             Serde<ProcessedSpat> processedSpatSerde = us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.ProcessedSpat();
+             Serde<SpatTimestampDeltaEvent> spatTimestampDeltaEventSerde = JsonSerdes.SpatTimestampDeltaEvent()) {
 
             var inputTopic = driver.createInputTopic(inputTopicName,
-                    us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.RsuIntersectionKey().serializer(),
-                    us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.ProcessedSpat().serializer());
+                    rsuIntersectionKeySerde.serializer(), processedSpatSerde.serializer());
 
             var timestampDeltaEventTopic = driver.createOutputTopic(timestampOutputTopicName,
-                    us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.RsuIntersectionKey().deserializer(),
-                    JsonSerdes.SpatTimestampDeltaEvent().deserializer());
+                    rsuIntersectionKeySerde.deserializer(), spatTimestampDeltaEventSerde.deserializer());
 
             final RsuIntersectionKey key = new RsuIntersectionKey(rsuId, intersectionId, region);
 
@@ -159,11 +171,16 @@ public class SpatValidationTopologyTest {
             inputTopic.pipeInput(key, createSpatWithTimestampOffset(start4, start4_minus600), start4);
 
             var timestampEventList = timestampDeltaEventTopic.readKeyValuesToList();
-            assertThat("2 of 4 inputs should have produced timestamp delta events", timestampEventList, hasSize(2));
 
-            Set<Long> expectDeltas = Set.of(500L, 600L);
-            Set<Long> actualDeltas = timestampEventList.stream().map(entry -> Math.abs(entry.value.getDelta().getDeltaMillis())).collect(toSet());
-            assertThat(String.format("Only the 500ms and 600ms offsets should have produced events.  Actual deltas: %s", actualDeltas), Sets.symmetricDifference(expectDeltas, actualDeltas), hasSize(0));
+            final Set<Long> expectDeltas = ImmutableSet.of(500L, -20L, -600L);
+            final int numberOfEventsExpected = expectDeltas.size();
+
+            assertThat(String.format("%s of 4 inputs should have produced timestamp delta events", numberOfEventsExpected),
+                    timestampEventList, hasSize(numberOfEventsExpected));
+
+
+            Set<Long> actualDeltas = timestampEventList.stream().map(entry -> entry.value.getDelta().getDeltaMillis()).collect(toSet());
+            assertThat(String.format("Expect deltas: %s.  Actual deltas: %s", expectDeltas, actualDeltas), Sets.symmetricDifference(expectDeltas, actualDeltas), hasSize(0));
         }
     }
 
@@ -191,6 +208,10 @@ public class SpatValidationTopologyTest {
         parameters.setDebug(debug);
         parameters.setMaxDeltaMilliseconds(maxDeltaMilliseconds);
         parameters.setOutputTopicName(timestampOutputTopicName);
+        parameters.setKeyStoreName(keyStoreName);
+        parameters.setEventStoreName(eventStoreName);
+        parameters.setRetentionTimeMinutes(retentionTimeMinutes);
+        parameters.setNotificationTopicName(notificationTopicName);
         return parameters;
     }
 
@@ -205,6 +226,7 @@ public class SpatValidationTopologyTest {
         parameters.setLowerBound(lowerBound);
         parameters.setUpperBound(upperBound);
         parameters.setDebug(debug);
+
         return parameters;
     }
 
@@ -222,7 +244,7 @@ public class SpatValidationTopologyTest {
         return spat;
     }
 
-    private ProcessedSpat createSpatWithTimestampOffset(Instant odeReceivedAt, Instant timestamp) {
+    private ProcessedSpat createSpatWithTimestampOffset(Instant timestamp, Instant odeReceivedAt) {
         var spat = new ProcessedSpat();
         spat.setOdeReceivedAt(odeReceivedAt.atZone(ZoneOffset.UTC).format(DateTimeFormatter.ISO_DATE_TIME));
         spat.setUtcTimeStamp(timestamp.atZone(ZoneOffset.UTC));
